--- a/uav_mission_manager_ui/package.json
+++ b/uav_mission_manager_ui/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@types/leaflet": "^1.9.21",
     "axios": "^1.11.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.543.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
